--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    <div class="app"></div>
+    <div id="app"></div>
 
 
     <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
-    <script src="/public/js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
